<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="write">Написать в поддержку</string>
    <string name="doc">Пользовательское соглашение</string>
    <string name="textSearch">Введите поисковый запрос</string>
    <string name="textClear">Очистка</string>
    <string name="site">https://practicum.yandex.ru/android-developer/</string>
    <string name="subject_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_site">https://yandex.ru/legal/practicum_offer/</string>
    <string name="trackName">Трек:</string>
    <string name="ArtistName">Артист:</string>
    <string name="duration">Длительность:</string>
    <string name="NothingSearch">Ничего не нашлось</string>
    <string name="NoInternet">Нет соединения</string>
    <string name="problemConnection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="storySearch">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="Duration">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="toast">Вы еще не включали музыку, воспользуйтесь командой Поиск</string>
    <string name="warning">Для данного трека недоступно предпрослушивание</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="emptyMediateka">Ваша медиатека пуста</string>
    <string name="emptyPlayLists">Вы не создали ни одного плейлиста</string>
    <string name="Mediateka">Медиатека</string>
    <string name="FavoriteTracks">Избранные треки</string>
    <string name="Playlists">Плейлисты</string>
    <string name="newplaylist">Новый плейлист</string>
    <string name="name">Название*</string>
    <string name="Description">Описание</string>
    <string name="Create">Создать</string>
    <string name="addPlaylist">Добавить в плейлист</string>

    <plurals name="tracks" translatable="false">
        <item quantity="one">%1$d трек</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="zero">%1$d треков</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d трека</item>
    </plurals>

    <plurals name="minutes" translatable="false">
        <item quantity="one">%1$d минута</item>
        <item quantity="zero">%1$d минут</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минуты</item>
    </plurals>

</resources>