<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/backgroundStyle"
    android:padding="@dimen/padding_20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/textPlaylistStyle"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/search"
        style="@style/ButtonStyle"
        android:text="@string/search"
        android:visibility="visible"
        app:cornerRadius="@dimen/cornerRadius"
        app:icon="@drawable/ic_vectorsearch"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />
    <Button
        android:id="@+id/media"
        style="@style/ButtonStyle"
        android:text="@string/media"
        app:cornerRadius="@dimen/cornerRadius"
        app:icon="@drawable/ic_vectormedia"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/settings"
        style="@style/ButtonStyle"
        android:text="@string/settings"
        app:cornerRadius="@dimen/cornerRadius"
        app:icon="@drawable/ic_vectorsettings"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />

</LinearLayout>



